--- a/mflowgen/common/gen_sram_macro/configure.yml
+++ b/mflowgen/common/gen_sram_macro/configure.yml
@@ -25,6 +25,7 @@ parameters:
   bc_corner: "FFPG_0P880V_125C"
   partial_write: False
   leakage_opt: False
+  redundancy: False
 
 postconditions:
    # Sanity check to see if we at least got one sram
