--- a/mflowgen/glb_top/sim-gl-compile/configure.yml
+++ b/mflowgen/glb_top/sim-gl-compile/configure.yml
@@ -29,5 +29,5 @@ postconditions:
   - assert File( 'outputs/sim.log' )      # must exist
 
   # Basic error checking
-  - assert 'Error,' not in File( 'outputs/sim.log' )
-  - assert '*E,' not in File( 'outputs/sim.log' )
+  - assert 'Error' not in File( 'outputs/sim.log' )
+  - assert '*E' not in File( 'outputs/sim.log' )
