--- a/.buildkite/pipelines/mem_tile_only.yml
+++ b/.buildkite/pipelines/mem_tile_only.yml
@@ -1,7 +1,7 @@
 agents: { jobsize: "hours" }
 
 env:
-  GOLD: /build/memtile${BUILDKITE_BUILD_NUMBER}
+  GOLD: /build/mem${BUILDKITE_BUILD_NUMBER}
   # OVERRIDE_MFLOWGEN_BRANCH: silent_fail
 
 steps:
