--- a/.buildkite/pipelines/pe_tile_w_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_steps.yml
@@ -1,25 +1,72 @@
 agents: { jobsize: "hours" }
 
+##############################################################################
+# Use this to test a specific branch/commit:
+# Add to env:
+#   NOV11: ee214ef77b827f969e4b5f056f5d866cf391be7a
+# Add to commands:
+# - pwd; git branch; git checkout $$NOV11
+
 env:
   GOLD: /build/pm${BUILDKITE_BUILD_NUMBER}
   # OVERRIDE_MFLOWGEN_BRANCH: silent_fail
   TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
 
+  CACHE: /build/gold
+  GET_STEP_CONTEXT: eval $$GARNET_HOME/mflowgen/bin/get-step-context.sh $CACHE
+
+
+# prototype for using get-step-context:
+#   % cd /build/chip2
+#   % get-step-context.sh /build/chip1 cadence-innovus-postroute_hold
+#   % make *-cadence-innovus-postroute_hold
+
+
+
 steps:
 
-- label: 'fc rtl'
-  commands:
-  - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array         --steps rtl
-- wait: ~
 
+- label: 'setup, fullchip rtl from cache'
+  commands:
+
+# # Copy existing rtl collateral
+# - 'set -x; mkdir -p full_chip; cp -rp $$GOLD/full_chip/*-rtl full_chip/'
+
+  # Copy existing rtl collateral;
+  # Think of setup-buildkite as a fancy "mkdir -p $d && cd $d"
+  - 'set -x; 
+     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
+     $$GET_STEP_CONTEXT tile_array;
+     pwd; ls -lR'
 
 - label: 'pe rtl'
   commands:
   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps rtl
 - wait: ~
 
-
 - label: 'pe syn'
   commands:
   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
 - wait: ~
+
+
+
+
+# Original code:
+# 
+# - label: 'fc rtl'
+#   commands:
+#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array --steps rtl
+# - wait: ~
+# 
+# 
+# - label: 'pe rtl'
+#   commands:
+#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps rtl
+# - wait: ~
+# 
+# 
+# - label: 'pe syn'
+#   commands:
+#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
+# - wait: ~
