--- a/.buildkite/pipelines/pe_tile_w_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_steps.yml
@@ -26,7 +26,7 @@ env:
 steps:
 
 
-- label: 'setup, fullchip rtl from cache'
+- label: 'setup'
   commands:
 
 # # Copy existing rtl collateral
@@ -40,15 +40,39 @@ steps:
      $$GET_STEP_CONTEXT --from /build/gold --step tile_array;
      pwd; ls -lR'
 
-- label: 'pe rtl'
+# Uhhhh...see if this works
+- label: 'setup'
   commands:
-  - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps rtl
-- wait: ~
 
-- label: 'pe syn'
-  commands:
-  - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
-- wait: ~
+# # Copy existing rtl collateral
+# - 'set -x; mkdir -p full_chip; cp -rp $$GOLD/full_chip/*-rtl full_chip/'
+
+  # Copy existing rtl collateral;
+  # Think of setup-buildkite as a fancy "mkdir -p $d && cd $d"
+  # "mflowgen run" should maybe renumber rtl step if necessary?
+
+  # Make $GOLD directory and cd to it
+  # # "mflowgen run full_chip" to build full_chip framework (may not be necessary)
+  # Copy rtl collateral from $CACHE
+  # "mflowgen run full_chip" to reset rtl in the context of latest full_chip framework
+  # 
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
+     set -x; mkdir -p full_chip; cp -rp $$CACHE/full_chip/*-rtl full_chip/
+     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
+     make -n tile_array;
+     pwd; ls -lR'
+
+
+
+# - label: 'pe rtl'
+#   commands:
+#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps rtl
+# - wait: ~
+# 
+# - label: 'pe syn'
+#   commands:
+#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
+# - wait: ~
 
 
 
