--- a/.buildkite/pipelines/pe_tile_w_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_steps.yml
@@ -65,15 +65,15 @@ steps:
 
 
 
-# - label: 'pe rtl'
-#   commands:
-#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps rtl
-# - wait: ~
-# 
-# - label: 'pe syn'
-#   commands:
-#   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
-# - wait: ~
+- label: 'pe rtl'
+  commands:
+  - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps rtl
+- wait: ~
+
+- label: 'pe syn'
+  commands:
+  - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
+- wait: ~
 
 
 
