--- a/.buildkite/pipelines/pe_tile_only.yml
+++ b/.buildkite/pipelines/pe_tile_only.yml
@@ -2,7 +2,8 @@ agents: { jobsize: "hours" }
 
 env:
   GOLD: /build/pe${BUILDKITE_BUILD_NUMBER}
-  # OVERRIDE_MFLOWGEN_BRANCH: silent_fail
+  OVERRIDE_MFLOWGEN_BRANCH: droute-auto-stop
+  stop_on_failed_routing: true
 
 steps:
 
@@ -17,7 +18,8 @@ steps:
 
 - label: 'PE'
   commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
+  - 'printenv | grep stop || echo not found;
+     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
      set -o pipefail;
      make Tile_PE |& tee make-pe.log;
      $$GARNET_HOME/.buildkite/pipelines/check_pe_area.sh
