--- a/.buildkite/pipelines/pe_tile_w_cached_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_cached_steps.yml
@@ -60,7 +60,7 @@ steps:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD/full_chip;
      pwd; set -x; cp -rp $$CACHE/full_chip/*-rtl .;
      mkdir 18-tile_array;
-     pwd; ls -l'
+     pwd; ls -l;
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
      pwd; ls -l'
 
