--- a/.buildkite/pipelines/pe_tile_w_cached_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_cached_steps.yml
@@ -59,10 +59,15 @@ steps:
   # 
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD/full_chip;
      pwd; set -x; cp -rp $$CACHE/full_chip/*-rtl .;
-     mkdir 18-tile_array;
+     rsync -aRv $$CACHE/full_chip/*-tile_array/*-TilePE/*-constraints .;
      pwd; ls -l;
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
-     pwd; ls -l'
+     pwd; ls -l;
+     cd *-tile_array; mflowgen run --design $$GARNET_HOME/mflowgen/tile_array;
+     pwd; ls -l;
+     cd *-Tile_PE; mflowgen run --design $$GARNET_HOME/mflowgen/Tile_PE;
+     pwd; ls -l;
+     make -n rtl'
 
 
 # - label: 'pe rtl'
@@ -74,6 +79,18 @@ steps:
 #   commands:
 #   - $TEST --need_space 30G --build_dir $GOLD full_chip tile_array Tile_PE --steps synthesis
 # - wait: ~
+
+
+# Looks like we can survive renumberings if we're careful:
+# Found the following existing build directories. Their numbering will be
+# preserved in the new graph, as will their build status (assuming the same
+# graph connectivity). This prevents unnecessary rebuilds due solely to
+# different numberings. This means that an existing step N will remain step
+# N. For a completely clean build, run the "clean-all" target.
+#  
+# -  10 : 10-rtl
+# -  12 : 12-soc-rtl
+# -  18 : 18-tile_array
 
 
 
