--- a/.buildkite/pipelines/pe_tile_w_cached_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_cached_steps.yml
@@ -58,16 +58,20 @@ steps:
   # "mflowgen run full_chip" to reset rtl in the context of latest full_chip framework
   # 
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD/full_chip;
+     echo "--- copy fullchip rtl, tile-pe constraints";
      pwd; set -x; cp -rp $$CACHE/full_chip/*-rtl .;
      (cd $$CACHE; rsync -aRv full_chip/*-tile_array/*-Tile_PE/*-constraints $$GOLD);
      pwd; ls -l;
+     echo "--- set up design hierarchy(s)";
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
      pwd; ls -l;
      cd *-tile_array; mflowgen run --design $$GARNET_HOME/mflowgen/tile_array;
      pwd; ls -l;
      cd *-Tile_PE; mflowgen run --design $$GARNET_HOME/mflowgen/Tile_PE;
      pwd; ls -l;
-     make -n rtl'
+     echo "--- make rtl I guess"; make -n rtl;
+     echo "--- make syn perhaps"; make -n cadence-genus-synthesis;
+     '
 
 
 # - label: 'pe rtl'
