--- a/.buildkite/pipelines/pe_tile_w_cached_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_cached_steps.yml
@@ -76,7 +76,7 @@ steps:
      echo "--- design hierarchy: full_chip/tile_array/Tile_PE";
      cd *-Tile_PE; mflowgen run --design $$GARNET_HOME/mflowgen/Tile_PE;
 
-     echo '------------------------------------------------------------------------';
+     echo "------------------------------------------------------------------------";
      echo "--- quick check of goodness";
      set -x;
 
@@ -96,7 +96,7 @@ steps:
      ls -ld $$GOLD/$$step;
 
      set +x;
-     echo '------------------------------------------------------------------------';
+     echo "------------------------------------------------------------------------";
 
 
 
