--- a/.buildkite/pipelines/pe_tile_w_cached_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_cached_steps.yml
@@ -65,7 +65,7 @@ steps:
      pwd; set -x; cp -rp $$CACHE/full_chip/*-rtl .;
 
      echo "--- fetch fullchip/tile_array/Tile_PE/constraints from $$CACHE";
-     (cd $$CACHE; rsync -aRv full_chip/*-tile_array/*-Tile_PE/*-constraints $$GOLD);
+     (cd $$CACHE; rsync -aR full_chip/*-tile_array/*-Tile_PE/*-constraints $$GOLD);
 
      echo "--- design hierarchy: full_chip";
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
@@ -81,13 +81,13 @@ steps:
      set -x;
 
      step=`cd $$CACHE; /bin/ls -1d full_chip/*-tile_array/*-Tile_PE/*-place`;
-     ls -ld $$CACHE/$$step; echo "(cd $$CACHE; rsync -aRv $$step $$GOLD)";
+     ls -ld $$CACHE/$$step; echo "(cd $$CACHE; rsync -aR $$step $$GOLD)";
 
      step=`cd $$CACHE; /bin/ls -1d full_chip/*-tile_array/*-Tile_PE/*-cts`;
-     ls -ld $$CACHE/$$step; echo "(cd $$CACHE; rsync -aRv $$step $$GOLD)";
+     ls -ld $$CACHE/$$step; echo "(cd $$CACHE; rsync -aR $$step $$GOLD)";
 
      step=`cd $$CACHE; /bin/ls -1d full_chip/*-tile_array/*-Tile_PE/*-postcts_hold`;
-     ls -ld $$CACHE/$$step; echo "(cd $$CACHE; rsync -aRv $$step $$GOLD)";
+     ls -ld $$CACHE/$$step; echo "(cd $$CACHE; rsync -aR $$step $$GOLD)";
 
      set +x;
      echo "------------------------------------------------------------------------";
@@ -106,23 +106,24 @@ steps:
 
      step=`cd $$CACHE; /bin/ls -1d full_chip/*-tile_array/*-Tile_PE/*-place`;
      ls -ld $$CACHE/$$step;
-     (cd $$CACHE; rsync -aRv $$step $$GOLD); touch $$GOLD/$$step/.prebuilt;
+     (cd $$CACHE; rsync -aR $$step $$GOLD); touch $$GOLD/$$step/.prebuilt;
      ls -ld $$GOLD/$$step;
 
      step=`cd $$CACHE; /bin/ls -1d full_chip/*-tile_array/*-Tile_PE/*-cts`;
      ls -ld $$CACHE/$$step;
-     (cd $$CACHE; rsync -aRv $$step $$GOLD); touch $$GOLD/$$step/.prebuilt;
+     (cd $$CACHE; rsync -aR $$step $$GOLD); touch $$GOLD/$$step/.prebuilt;
      ls -ld $$GOLD/$$step;
 
      step=`cd $$CACHE; /bin/ls -1d full_chip/*-tile_array/*-Tile_PE/*-postcts_hold`;
      ls -ld $$CACHE/$$step;
-     (cd $$CACHE; rsync -aRv $$step $$GOLD); touch $$GOLD/$$step/.prebuilt;
+     (cd $$CACHE; rsync -aR $$step $$GOLD); touch $$GOLD/$$step/.prebuilt;
      ls -ld $$GOLD/$$step;
 
      set +x;
-
+     : maybe this is a comment;
      echo;
-     echo "--- make route perhaps"
+     echo "--- make route perhaps";
+     set -o pipefail;
      echo exit 13 | make cadence-innovus-route |& tee make-route.log;
      '
      # Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
