--- a/mflowgen/glb_top/synopsys-ptpx-gl/configure.yml
+++ b/mflowgen/glb_top/synopsys-ptpx-gl/configure.yml
@@ -38,6 +38,6 @@ parameters:
   design_name: undefined
   strip_path: top/dut
   PWR_AWARE: False
-  instances: ["glb_tile_gen_0", "glb_tile_gen_1"]
-  parse_modules: ["glb_cfg", "'(glb_switch|glb_proc_router|glb_strm_router)'", "'glb_(load|store|pcfg)_dma'", "glb_bank_memory", "sram_cfg_ctrl"]
+  instances: ["glb_tile_gen_0", "glb_tile_gen_2", "glb_tile_gen_3", "glb_tile_gen_15"]
+  parse_modules: ["glb_cfg", "glb_sram_cfg_switch", "glb_bank_mux", "glb_bank_0", "glb_bank_1", "glb_proc_switch", "glb_strm_ring_switch", "glb_pcfg_ring_switch", "glb_load_dma", "glb_store_dma", "glb_pcfg_dma"]
   chkpt: False # Turn this on to save periodically during ptpx flow
