--- a/mflowgen/glb_top/sim-gl-run/configure.yml
+++ b/mflowgen/glb_top/sim-gl-run/configure.yml
@@ -12,7 +12,7 @@ commands:
 
 outputs:
   - run.log
-  - run.saif
+  - run.fsdb
 
 postconditions:
   - assert File( 'outputs/run.log' )      # must exist
