--- a/.buildkite/pipelines/mem_tile_only.yml
+++ b/.buildkite/pipelines/mem_tile_only.yml
@@ -2,7 +2,7 @@ agents: { jobsize: "hours" }
 
 env:
   GOLD: /build/mem${BUILDKITE_BUILD_NUMBER}
-  # OVERRIDE_MFLOWGEN_BRANCH: silent_fail
+  OVERRIDE_MFLOWGEN_BRANCH: silent_fail
 
 steps:
 
