--- a/.buildkite/pipelines/pe_tile_w_cached_steps.yml
+++ b/.buildkite/pipelines/pe_tile_w_cached_steps.yml
@@ -1,6 +1,13 @@
 agents: { jobsize: "hours" }
 
-##############################################################################
+########################################################################
+# What does this pipeline do?
+# It is able to run a single step in a subgraph using cached collateral.
+# Specifically: runs Tile_PE synthesis step using prebuilt collateral
+# from /build/gold (settable via CACHE env var below).
+
+
+########################################################################
 # Use this to test a specific branch/commit:
 # Add to env:
 #   NOV11: ee214ef77b827f969e4b5f056f5d866cf391be7a
@@ -11,7 +18,7 @@ env:
   GOLD: /build/pm${BUILDKITE_BUILD_NUMBER}
   CACHE: /build/gold
 
-  OVERRIDE_MFLOWGEN_BRANCH: droute-auto-stop
+  # OVERRIDE_MFLOWGEN_BRANCH: droute-auto-stop
   # stop_on_failed_routing: true
 
 
