--- a/mflowgen/glb_top/sim-run/configure.yml
+++ b/mflowgen/glb_top/sim-run/configure.yml
@@ -5,6 +5,11 @@ parameters:
   tool: "XCELIUM"
   rtl_testvectors: ["test1", "test2", "test3", "test4", "test5", "test6", "test7", "test8", "test9"]
 
+inputs:
+  - Makefile
+  - sim
+  - testvectors
+
 commands:
   - bash run_sim.sh
 
